--- a/src/sass/pages/contact.scss
+++ b/src/sass/pages/contact.scss
@@ -11,6 +11,13 @@
     .center-align {
         margin-top: auto;
         margin-bottom: auto;
+        padding-right: 0;
+    }
+    .bottom-row {
+        padding-top: 10px;
+    }
+    .border-bottom {
+        min-height: 190px;
     }
     @media screen and (max-width: 480px) {
         .grd-grid-2 {
@@ -23,6 +30,9 @@
         }
         .grd-grid-mobile-12 {
             width: 100%;
+        }
+        .border-bottom {
+            min-height: 130px;
         }
     }
 }
